Name:		pipeline-eventgen
Version:	0.999
Synopsis:	event generation executable in pipeline 
Description: 	This package provides an executable for event generation 
                in pipeline. 
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files: resource/pythia8toHEPEVT/Makefile.st
            resource/pythia8toHEPEVT/pythia8toHEPEVT.cc


Executable pipeline-eventgen 
  Main-is: pipeline-eventgen.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 cmdargs >= 0.7,
                 process, 
                 unix, 
                 directory, 
                 mtl>2, 
                 filepath,
                 aeson,
                 bytestring >= 0.10,
                 unordered-containers>= 0.2,
                 text                >= 0.11, 
                 vector              >= 0.10,
                 webdav-manager      >= 0.999,
                 madgraph-auto       >= 0.999,
                 madgraph-auto-model >= 0.999,
                 LHEParser           >= 0.999, 
                 HEPUtil             >= 0.999, 
                 attoparsec >= 0.10,
                 configurator >= 0.2.0.2,  
                 hslogger >= 1.2,
                 random,
                 pipeline-eventgen
               

 
Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 transformers >= 0.3,
                 process, 
                 unix, 
                 directory, 
                 mtl>2, 
                 filepath,
                 aeson,
                 aeson-pretty,
                 unordered-containers>= 0.2,
                 text                >= 0.11, 
                 vector              >= 0.10,
                 webdav-manager      >= 0.999,
                 madgraph-auto       >= 0.999,
                 madgraph-auto-model >= 0.999,
                 LHEParser           >= 0.999, 
                 HEPUtil             >= 0.999, 
                 attoparsec >= 0.10, 
                 configurator >= 0.2.0.2, 
                 bytestring >= 0.10,
                 base64-bytestring >= 1,
                 binary >= 0.5,
                 crypto-api >= 0.10, 
                 RSA >= 1.2, 
                 HStringTemplate, 
                 hslogger >= 1.2 


  Exposed-Modules: 
                   HEP.Automation.EventGeneration.Config 
                   HEP.Automation.EventGeneration.Deploy 
                   HEP.Automation.EventGeneration.Job
                   HEP.Automation.EventGeneration.Type
                   HEP.Automation.EventGeneration.Util 
                   HEP.Automation.EventGeneration.Work
      
  Other-Modules:   
                   Paths_pipeline_eventgen

		 
